--- a/TSEWATCH/pom.xml
+++ b/TSEWATCH/pom.xml
@@ -46,6 +46,12 @@
         <artifactId>mailjet-client</artifactId>
         <version>4.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
     
   	</dependencies>
 </project>
